# 2D-FVM-Euler-Equation-Solver

./: CMakeCache.txt  CMakeLists.txt  DataManager.cpp  DataManager.h  DataManager_TEST.cpp  DataManager_TEST.h  DiscretizationError.txt  DiscretizationErrorOutput.cpp  EulerOperator.cpp  EulerOperator.h  EulerOperator_TEST.cpp  EulerOperator_TEST.h  ExactNozzle.cpp  ExactNozzle.h  Main.cpp  Main_TEST.cpp  MeshAccess.hpp  MeshGen.cpp  MeshGen.h  Output.cpp  Output.h  Output_TEST.cpp  README.txt  Test.cpp  Test.h  TimeIntegrator.cpp  TimeIntegrator.h  TimeIntegrator_TEST.cpp  TimeIntegrator_TEST.h  UnitTest.cpp
